# platform-ui

./: .dockerignore  .env.example  .gitignore  EXTERNAL_AGENT_FEATURE_PROPOSAL.md  README.md  TODO.md  docker-compose.yml  eslint.config.mjs  openbiocure.yaml  package-lock.json  package.json  rag.yml  start.sh  test-meili.sh
backend/: Makefile  Procfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  taskfile.yml
backend/analytics-service/: main.py  requirements.txt
backend/analytics-service/app/: __init__.py
backend/api-gateway/: main.py  requirements.txt
backend/api-gateway/config/: service_registry.py  services.yaml
backend/auth-service/: README.md  alembic.ini  cli.py  config.yaml  dev.env  env.example  main.py  requirements.txt  seed_database.py  seed_simple.py  service_registry.yaml  simple_auth.py
backend/auth-service/app/: dependencies.py
backend/auth-service/migrations/: env.py
backend/auth-service/seeds/: __init__.py  development.py  production.py  reference_data.py  staging.py  test.py
backend/database/: audit_logs.sql  database.mermaid
backend/project-service/: main.py  requirements.txt
backend/project-service/app/: __init__.py
backend/shared/database/: config.yaml  init.sql
backend/shared/events/: __init__.py  config.py  producer.py  schemas.py
backend/shared/repositories/: base_repository.py  repository_factory.py  unit_of_work.py
backend/shared/utils/: database_config.py
backend/workspace-service/: README.md  env.example  main.py  requirements.txt
backend/workspace-service/app/: __init__.py
docs/: TODO.md  (+5 more)
(+884 files in other folders)
