[tool.poetry]
name = "openbiocure-backend"
version = "1.0.0"
description = "OpenBioCure Backend Microservices"
authors = ["OpenBioCure Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.3"
email-validator = "^2.1.0"
httpx = "^0.25.2"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
honcho = "^2.0.0"
supervisor = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Easy commands to replace bash scripts
start-all = "scripts.start:main"
stop-all = "scripts.stop:main"
health-check = "scripts.health:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
